[project]
name = "spisdil-moder-bot"
version = "0.1.0"
description = "Modular aiogram-based moderation bot with multi-layer pipeline."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "SpisdilModerBotOSS Team" }
]
dependencies = [
    "aiogram>=3.4.1",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "structlog>=24.1.0",
    "tenacity>=8.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0"
]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
select = ["E", "F", "I", "W", "C90"]
line-length = 100

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
