[project]
name = "spisdil-moder-bot"
version = "0.1.0"
description = "Enterprise-ready Telegram moderation bot with layered AI enforcement and rule governance."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "SpisdilModerBotOSS Team" }
]
license = { file = "LICENSE" }
keywords = ["moderation", "telegram", "aiogram", "openai", "compliance", "middleware"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Chat",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
urls = {
    "Homepage" = "https://github.com/your-org/spisdil-moder-bot",
    "Documentation" = "https://github.com/your-org/spisdil-moder-bot#readme",
    "Source" = "https://github.com/your-org/spisdil-moder-bot",
    "Changelog" = "https://github.com/your-org/spisdil-moder-bot/blob/master/CHANGELOG.md",
}
dependencies = [
    "aiogram>=3.4.1",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "structlog>=24.1.0",
    "tenacity>=8.3.0",
    "regex>=2024.9.11"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0"
]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
select = ["E", "F", "I", "W", "C90"]
line-length = 100

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
